# merodi

./: .gitignore  README.md  pyproject.toml
src/: api.py  build.py  config.py  errors.py  fileops.py  hash.py  hooks.py  init_project.py  log.py  main.py  modules.py  settings.py  templates.py  watcher.py  webviewer.py
