[project]
name = "merodi"
version = "0.4.0"
description = "A markdown-based static site generator."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown",
    "jinja2",
    "pywebview",
    "watchdog",
	"PyGObject",
	"pymdown-extensions",
	"latex2mathml",
	"pygments",
	"ifaddr",
]

[project.scripts]
merodi = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
